# sep-41-token

./: Cargo.toml  README.md
.github/workflows/: cargo_publish.yml
mock-sep-41/: Cargo.toml
mock-sep-41/src/: allowance.rs  contract.rs  storage.rs  test.rs
sep-41/: Cargo.toml  README.md
sep-41/src/: lib.rs
sep-41/src/testutils/: mock_sep_41_token.wasm
